# whatisthisgame

./: .gitignore  CREDITS.md  Makefile  README.md  whatisthisgame.cabal
res/: color.frag  color.vert  game2d.vert  text.frag  text.vert
src/: Main.hs
src/WhatIsThisGame/: Animation.hs  Assets.hs  Collision.hs  Data.hs  Entity.hs  EntityTransform.hs  EntityUpdate.hs  Input.hs  Main.hs  Network.hs  Rendering.hs  Text.hs  Types.hs  Utils.hs  WindowConfig.hs  World.hs
src/WhatIsThisGame/Controllers/: Asteroids.hs  Background.hs  Bullet.hs  EnemySpawner.hs  Lives.hs  Player.hs
src/WhatIsThisGame/Utils/: Compose.hs  Movement.hs
