name:                whatisthisgame
version:             0.1.0.0
synopsis:            A game written using Elerea and Haskell to learna bout larger-scale (relative to my other projects) game development using FRP.
description:         A game written using Elerea and Haskell to learna bout larger-scale (relative to my other projects) game development using FRP.
homepage:            http://github.com/crockeo/whatisthisgame
license:             MIT
license-file:        LICENSE
author:              Cerek Hillen
maintainer:          cerekh@gmail.com
copyright:           (c) 2014, Cerek Hillen
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable whatisthisgame
  main-is:             WhatIsThisGame/Main.hs

  build-depends:       base     == 4.7.*
               ,       GLFW     == 0.5.2.2
               ,       elerea   == 2.7.0.2
               ,       GLUtil   == 0.8.2
               ,       vinyl-gl == 0.2.1
               ,       vinyl    == 0.4.3
               ,       linear   == 1.10.1.2
               ,       OpenGL

  hs-source-dirs:      src/

  default-language:    Haskell2010
